LIST OF CHANGES
---------------

 - run_is_deletable feature reimplementation for new-style data directory
   and merged products

release 53.0
 - a wrapper object npg_pipeline::product to represent a product
 - use products attribute to drive p4_stage1, seq_alignment and autoqc
 - create composisiotn.json files to guide archiving
 - p4 params files for seq_alignment moved from no_cal/laneN to no_cal
     (changes run folder structure when merging lanes)
 - cluster_count and seqchksum_comparator checks now done at run level instead
     of lane level
 - upfront definition of all products
 - generic runfolder scaffolding for any products
 - since the top-level qc directory is no longer required, the tileviz
   directory is moved to the analysis directory
 - reshuffle of roles in npg_pipeline::roles:
     npg_pipeline::roles::business::base merged into npg_pipeline::base;
     npg_pipeline::roles::business::flag_options moved to
     npg_pipeline::base::options, a number of pipeline options from other
     modules moved to this role;
     npg_pipeline::roles::accessors moved to npg_pipeline::base::config;
     helper functions moved to a new role - npg_pipeline::function::util
 - ref_adapter_pre_exec_string method renamed to repos_pre_exec_string
 - metadata_cache_dir method, formerly in npg_pipeline::roles::business::base,
   removed; npg_pipeline::function::p4_stage1_analysis module, the only user
   of this function, switched to use the relevant accessor from the
   npg_pipeline::runfolder_scaffold role
 - minor changes for bcfstats qc check
 - executor type (lsf or wr) can be specified in the configuration file
 - wr executor:
     set per-job priority;
     increase priority for p4 stage 1 job and its predecessors;
     set priority of status and start-stop jobs to zero so that
     they are executed immediately, but still within dependencies
     and memory constraints;
     map queues to arbitrary wr options, in particular, a special queue